# pulsebeam

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  dist-workspace.toml  filtered.txt  index.html  index.js  index.ts  lib.ts  package-lock.json  package.json  release-plz.toml  release.toml  rust-toolchain.toml  sfu.ts  whep.html  whip.html  workspace.json  workspace.override.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: binaries.yml  cd.yml  ci.yml  docker.yml  release.yml  rust.yml  smart-release.yml
demo/: Caddyfile  README.md  compose.yaml  index.html  package-lock.json  package.json  vite.config.js
demo/src/: main.ts
docs/: architecture.d2  architecture.excalidraw
examples/: channelbench.rs
makefiles/: net.mk
proto/: sfu.proto
pulsebeam/: CHANGELOG.md  Cargo.toml  Makefile  build.rs  release.toml
pulsebeam-actor/: Cargo.toml
pulsebeam-actor/src/: actor.rs  lib.rs  mailbox.rs
pulsebeam-agent/: CHANGELOG.md  Cargo.toml  README.md
pulsebeam-agent/src/: actor.rs  agent.rs  api.rs  clock.rs  core.rs  lib.rs  manager.rs  media.rs  rt.rs  signaling.rs  tcp.rs
pulsebeam-agent/src/agent/: builder.rs  controller.rs  driver.rs  handles.rs  mailbox.rs  mod.rs  reliable.rs  slots.rs
pulsebeam-cli/: CHANGELOG.md  Cargo.toml  README.md
pulsebeam-cli/src/: main.rs  video.h264
pulsebeam-core/: Cargo.toml
pulsebeam-core/src/: lib.rs  net.rs
pulsebeam-proto/: Cargo.toml  build.rs
pulsebeam-proto/proto/: arq.proto  signaling.proto
pulsebeam-proto/src/: arq.rs  lib.rs  signaling.rs
pulsebeam-runtime/: CHANGELOG.md  Cargo.toml  README.md
pulsebeam-runtime/benches/: spsc.rs  sync.rs
pulsebeam-runtime/src/: actor.rs  detector.rs  lib.rs  macros.rs  mailbox.rs  metrics.rs  net.rs  prelude.rs  rand.rs  rng.rs  rt.rs  system.rs  test_utils.rs  testing.rs
pulsebeam-runtime/src/collections/: double_buffer.rs  mod.rs  ring.rs  slot_group.rs
pulsebeam-runtime/src/net/: bound_udp.rs  bound_udp_sim.rs  mod.rs  sim.rs  sim_udp.rs  tcp.rs  udp.rs  udp_scalar.rs
pulsebeam-runtime/src/rt/: detector.rs  mod.rs  occupancy.rs  spawn.rs
pulsebeam-runtime/src/sync/: bit_signal.rs  event_listener.rs  mod.rs  mpsc.rs  pool_buf.rs  slot_group.rs  spmc.rs  spsc.rs  task_group.rs
pulsebeam-runtime/src/tests/: loom_spmc.rs  mod.rs
pulsebeam-runtime/src/unsync/: event_listener.rs  mod.rs  spmc.rs
pulsebeam-sfu/: Cargo.toml
pulsebeam-sfu/src/: actor.rs  participant.rs
pulsebeam-sfu/src/proto/: sfu.rs
pulsebeam-simulator/: CHANGELOG.md  Cargo.toml  README.md
pulsebeam-simulator/proptest-regressions/tests/: connection.txt
pulsebeam-simulator/src/: lib.rs  main.rs
pulsebeam-simulator/src/common/: client.rs
pulsebeam-simulator/src/tests/: connection.rs  data_channel.rs  declarative.rs  dynamic.rs  mod.rs  network.rs  scenario.rs  simulcast.rs  slots.rs
pulsebeam-simulator/src/tests/common/: client.rs  mod.rs  qoe.rs
pulsebeam-simulator/src/tests/simulcast/: broadcast.rs  mod.rs  multi_party.rs  one_to_one.rs  screen_share.rs  support.rs  teleoperation.rs
pulsebeam-simulator/tests/: mod.rs
pulsebeam-simulator/tests/common/: client.rs  mod.rs
pulsebeam-testdata/: Cargo.toml
pulsebeam-testdata/src/: .gitignore  .gitingore  Makefile  chrome.sdp  full_f.h264  full_f_cbr.h264  full_f_vbr.h264  half_h.h264  half_h_cbr.h264  half_h_vbr.h264  lib.rs  quarter_q.h264  quarter_q_cbr.h264  quarter_q_vbr.h264  summary.py
pulsebeam/src/: api.rs  audio_selector.rs  bitrate.rs  cert.pem  controller.rs  entity.rs  gateway.rs  id.rs  key.pem  lib.rs  log.rs  main.rs  message.rs  net.rs  node.rs  participant.rs  room.rs  shard.rs  signaling.rs  sim.rs  sink.rs  source.rs  system.rs  test_utils.rs  track.rs
pulsebeam/src/control/: api.rs  controller.rs  core.rs  mod.rs  negotiator.rs  registry.rs  room.rs  router.rs  tcp_acceptor.rs  ufrag.rs
pulsebeam/src/gateway/: actor.rs  demux.rs  ice.rs  mod.rs
pulsebeam/src/participant/: actor.rs  audio.rs  batcher.rs  bitrate.rs  core.rs  downstream.rs  effect.rs  error.rs  event.rs  jitter_buffer.rs  mod.rs  rtc.rs  shard.rs  signaling.rs  state.rs  upstream.rs  video.rs
pulsebeam/src/participant/downstream/: audio.rs  mod.rs  video.rs
pulsebeam/src/proto/: sfu.rs
pulsebeam/src/rtp/: buffer.rs  depacketizer.rs  jitter_buffer.rs  keyframe_detector.rs  mod.rs  monitor.rs  rtp_rewriter.rs  sequencer.rs  switcher.rs  sync.rs  test.rs  timeline.rs
pulsebeam/src/shard/: core.rs  demux.rs  dirty.rs  events.rs  metrics.rs  mod.rs  participants.rs  router.rs  scheduler.rs  timer.rs  worker.rs
scripts/: bwe_stability.py  cmd.sh  filter.py  latency.py  run.sh  visualize.py  viz.py
src/: actor.rs  context.rs  controller.rs  egress.rs  entity.rs  evicter.rs  group.rs  ice.rs  ingress.rs  lib.rs  main.rs  manager.rs  message.rs  net.rs  participant.rs  peer.rs  proto.rs  rng.rs  room.rs  router.rs  server.rs  signaling.rs  sink.rs  source.rs  track.rs  voice_ranker.rs
src/actors/: ingress.rs  message.rs
src/proto/: mod.rs  sfu.rs
tests/: happy.rs
tests/common/: mod.rs  net.rs
