[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://pulsebeam.dev/"
documentation = "https://pulsebeam.dev/"
repository = "https://github.com/PulseBeamDev/pulsebeam"
authors = ["Lukas Herman <lukas@pulsebeam.dev>"]
license = "AGPL-3.0"

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"
debug = 1
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true # Full debug info for symbols and source lines
strip = false # Retain symbols for profiling
debug-assertions = false # Match release behavior
panic = "abort" # make sure we don't include unwind in profile

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"]}
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3.31"
rand = "0.9"
str0m = { git = "https://github.com/algesten/str0m.git", rev = "783b020ff7c859372884889e205c5c838792e97a" }
bytes = "1.10.1"

[workspace]
resolver = "2"
members = [
  "pulsebeam", 
  "pulsebeam-agent", 
  "pulsebeam-cli",
  "pulsebeam-runtime",
  "pulsebeam-simulator",
]
