[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://pulsebeam.dev/"
documentation = "https://pulsebeam.dev/"
repository = "https://github.com/PulseBeamDev/pulsebeam"
authors = ["Lukas Herman <lukas@pulsebeam.dev>"]
license = "AGPL-3.0"

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"
debug = 1
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true # Full debug info for symbols and source lines
strip = false # Retain symbols for profiling
debug-assertions = false # Match release behavior
panic = "abort" # make sure we don't include unwind in profile

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"]}
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
futures-lite = "2.6.1"
rand = "0.9"
bytes = "1.11.0"
str0m = { git = "https://github.com/PulseBeamDev/str0m.git", branch = "patch/main"}
# str0m = { git = "https://github.com/algesten/str0m.git",  rev = "fe599b7847779e9dfd822daea943fa9e272c71b0", default-features = false, features = ["openssl", "vendored"] }
# str0m = { version = "0.11.1", default-features = false, features = ["openssl", "vendored", "sha1"] }

more-asserts = "0.3.1"

# [patch.crates-io]
# str0m = { path = "../str0m" }
# [patch."https://github.com/algesten/str0m.git"]
# str0m = { path = "../str0m" }
# [patch."https://github.com/PulseBeamDev/str0m.git"]
# str0m = { path = "../str0m" }

[workspace]
resolver = "2"
members = [
  "pulsebeam", 
  "pulsebeam-agent", 
  "pulsebeam-cli",
  "pulsebeam-runtime",
  "pulsebeam-simulator",
]
