[package]
name = "pulsebeam-actor"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
anyhow = { workspace = true }
futures-lite = "2.6.1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
