[package]
name = "pulsebeam-agent"
license = "Apache-2.0"
publish = false
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
futures-lite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
str0m = { workspace = true }
bytes = { workspace = true }

tokio = { workspace = true }
metrics = "0.24.3"
http = "1.4.0"
tokio-stream = "0.1.17"
if-addrs = "0.15.0"
pulsebeam-core = { path = "../pulsebeam-core" }
pulsebeam-proto = { path = "../pulsebeam-proto" }

