[package]
name = "pulsebeam-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
core_affinity = "0.8.0"
hdrhistogram = "7.5.4"
mimalloc = { version = "0.1.50" }
pulsebeam-agent = { path = "../pulsebeam-agent" }
pulsebeam-core = { path = "../pulsebeam-core", features = ["reqwest"] }
pulsebeam-testdata = { path = "../pulsebeam-testdata" }
rand.workspace = true
reqwest = "0.13.3"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", features = [
  "disable_initial_exec_tls",
  "unprefixed_malloc_on_supported_platforms"
] }
