[package]
name = "pulsebeam-core"
license = "Apache-2.0"
publish = false

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sim = [
    "dep:turmoil",
    "dep:axum",
    "dep:tower",
    "dep:hyper",
    "dep:hyper-util",
    "dep:pin-project-lite"
]

[dependencies]
tokio = { workspace = true }
http = { version = "^1" }

axum = { version = "^0.8", optional = true }
tower = { version = "^0.5", optional = true }
hyper = { version = "1.8.1", optional = true }
hyper-util = { version = "0.1.19", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
turmoil = { workspace = true, optional = true }
reqwest = { version = "0.13.1", optional = true }
