[package]
name = "pulsebeam-core"
license = "Apache-2.0"
publish = false

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sim = [
    "dep:turmoil",
    "dep:axum",
]

[dependencies]
tokio = { workspace = true }
http = { version = "^1" }

axum = { version = "^0.8", optional = true }
turmoil = { workspace = true, optional = true }
reqwest = { version = "0.13.1", optional = true }
