[package]
name = "pulsebeam-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]

[[bench]]
harness = false
name = "sync"

[dependencies]
async-channel = "2.5.0"
backtrace = "0.3.76"
bytes = { workspace = true }
crossbeam-utils = "0.8.21"
dashmap = "6.1.0"
event-listener = "5.4.1"
futures-lite = { workspace = true }
libc = "0.2.182"
loom = { version = "0.7", features = ["checkpoint", "futures"], optional = true }
metrics = "0.24.3"
once_cell = "1.21.3"
pulsebeam-core = { path = "../pulsebeam-core" }
quinn-udp = "0.5.14"
rand = { workspace = true }
socket2 = "0.6.1"
systemstat = "0.2.5"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { version = "0.4.6", features = ["metrics-rs-integration"] }
tokio-util = "0.7.17"
tracing = { workspace = true }

[dev-dependencies]
async-stream = "0.3.6"
criterion = { version = "0.8.1", features = ["async", "async_tokio"] }
futures = "0.3.32"
futures-concurrency = "7.6.3"

[features]
default = []
loom = ["dep:loom"]
