[package]
name = "pulsebeam-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
async-channel = "2.5.0"
backtrace = "0.3.76"
bytes = { workspace = true }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.21"
dashmap = "6.2.1"
diatomic-waker = "0.2"
event-listener = "5.4.1"
futures = "0.3.32"
futures-lite = { workspace = true }
libc = "0.2.186"
local-event = "0.1.2"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
once_cell = "1.21.4"
parking_lot = { version = "0.12", optional = true }
pulsebeam-core = { path = "../pulsebeam-core" }
quanta = "0.12.6"
rand = { workspace = true }
systemstat = "0.2.7"
tachyonix = "0.3.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.18"
tracing = { workspace = true }
triomphe = { workspace = true }
turmoil = { workspace = true, optional = true }
zerocopy = { version = "0.8.54", default-features = false, features = ["alloc"] }
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", default-features = false, features = ["socket", "uio", "net"] }
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
async-stream = "0.3.6"
criterion = { version = "0.8.2", features = ["async", "async_tokio"] }
futures-concurrency = "7.7.1"
futures-test = "0.3.32"

[features]
default = ["parking_lot"]
deep-metrics = []
parking_lot = ["dep:parking_lot", "once_cell/parking_lot"]
sim = ["pulsebeam-core/sim", "dep:turmoil"]
