[package]
name = "pulsebeam-simulator"
publish = false
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
turmoil.workspace = true
tracing.workspace = true

pulsebeam = { version = "0.3.1", path = "../pulsebeam" }
pulsebeam-runtime = { version = "0.1.0", path = "../pulsebeam-runtime" }
pulsebeam-agent = { version = "0.1.0", path = "../pulsebeam-agent" }
pulsebeam-core = { version = "0.1.0", path = "../pulsebeam-core", features = ["sim"] }

proptest = "1.9.0"
test-strategy = "0.4.3"
reqwest = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
http = "1.4.0"

pin-project-lite = "0.2.16"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
http-body-util = "0.1" # Crucial for .collect().await
bytes = "1"
anyhow.workspace = true

[dependencies]
tracing-subscriber = "0.3.22"
