[package]
name = "pulsebeam"
version = "0.3.1"
description = "Lightweight WebRTC SFU for Mobile, IoT, and Web"

edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
str0m = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true } 
tokio-util.workspace = true

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-zstd", "decompression-gzip", "decompression-zstd"] }
hex = "0.4.3"
bs58 = "0.5.1"
sha3 = "0.10.8"
metrics = "0.24.3"
hyper = "1.7.0"
pulsebeam-runtime = { version = "^0.1.0", path = "../pulsebeam-runtime" }
metrics-exporter-prometheus = "0.18.1"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec", "protobuf"] }
tokio-metrics = { version = "0.4.6", features = ["metrics-rs-integration"] }
once_cell = "1.21.3"
ahash = "0.8.12"
tokio-stream = { version = "0.1.17", features = ["sync"] }
clap = { version = "4.5.53", features = ["derive"] }
pulsebeam-core = { version = "0.1.0", path = "../pulsebeam-core" }
pulsebeam-proto = { version = "0.1.0", path = "../pulsebeam-proto" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms", "disable_initial_exec_tls"] }
jemalloc_pprof = { version = "0.8.1", features = ["symbolize", "flamegraph"] }

[patch.crates-io]
aws-lc-rs = { version = "1.15.2" }

[dev-dependencies]
more-asserts = { workspace = true } 

# Windows-specific str0m override
[target.'cfg(windows)'.dependencies]
str0m = { workspace = true, features = ["wincrypto"] }
