[package]
name = "pulsebeam"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
description = "Lightweight WebRTC SFU for Mobile, IoT, and Web"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8.12"
anyhow = { workspace = true }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base32 = "0.5.1"
bytes = { workspace = true }
clap = { version = "4.5.57", features = ["derive"] }
console-subscriber = { version = "0.5", optional = true }
derive_more = { workspace = true }
futures-buffered = { version = "0.2.13", features = ["tokio-coop"] }
futures-lite = { workspace = true }
futures-util = "0.3.32"
hyper = "1.7.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
once_cell = "1.21.3"
pprof = { version = "0.15.0", features = [
  "flamegraph",
  "prost-codec",
  "protobuf"
] }
pulsebeam-core = { path = "../pulsebeam-core" }
pulsebeam-proto = { path = "../pulsebeam-proto" }
pulsebeam-runtime = { path = "../pulsebeam-runtime" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.149"
sha3 = "0.10.8"
str0m = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { version = "0.4.6", features = ["metrics-rs-integration"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { workspace = true }
tower-http = { version = "0.6.8", features = [
  "compression-zstd",
  "cors",
  "decompression-gzip",
  "decompression-zstd"
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.20.0", features = ["v4", "v5", "v7"] }

[dev-dependencies]
hex = "0.4.3"
more-asserts = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc_pprof = { version = "0.8.1", features = ["flamegraph", "symbolize"] }
tikv-jemallocator = { version = "0.6.0", features = [
  "disable_initial_exec_tls",
  "profiling",
  "unprefixed_malloc_on_supported_platforms"
] }

# Windows-specific str0m override
[target.'cfg(windows)'.dependencies]
str0m = { workspace = true, features = ["wincrypto"] }

[features]
default = []
deep-metrics = []
tokio-console = ["console-subscriber", "tokio/tracing"]
