[package]
name = "pulsebeam"
version = "0.4.5"
authors.workspace = true
edition.workspace = true
description = "Lightweight WebRTC SFU for Mobile, IoT, and Web"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.dist]
tag-prefix = "pulsebeam-v"
changelog = "CHANGELOG.md"

[dependencies]
ahash = "0.8.12"
anyhow = { workspace = true }
arrayvec = { version = "0.7.6", features = ["serde"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
base32 = "0.5.1"
bitvec = "1.0.1"
bytes = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
console-subscriber = { version = "0.5", optional = true }
core_affinity = "0.8.3"
derive_more = { workspace = true }
futures-concurrency = "7.7.1"
futures-lite = { workspace = true }
hyper = "1.10.1"
indexmap = "2.14.0"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
mimalloc = { version = "0.1.52" }
once_cell = "1.21.4"
pin-project = "1"
pprof = { version = "0.15.0", features = [
  "flamegraph",
  "prost-codec",
  "protobuf"
] }
pulsebeam-core = { path = "../pulsebeam-core" }
pulsebeam-proto = { path = "../pulsebeam-proto" }
pulsebeam-runtime = { path = "../pulsebeam-runtime" }
rand = { workspace = true }
rustix = { version = "1.1.4", features = ["param", "process", "thread"] }
serde = { workspace = true }
serde_json = "1.0.150"
sha3 = "0.12.0"
slotmap = "1.1.1"
str0m = { workspace = true }
tachyonix = "0.3.1"
thiserror = { workspace = true }
thread-priority = "3.0.0"
tokio = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { workspace = true, features = ["time"] }
tower-http = { version = "0.6.11", features = [
  "compression-zstd",
  "cors",
  "decompression-gzip",
  "decompression-zstd"
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.2", features = ["v4", "v5", "v7"] }

[dev-dependencies]
hex = "0.4.3"
more-asserts = { workspace = true }
proptest = "1.11.0"
pulsebeam-testdata = { path = "../pulsebeam-testdata" }
turmoil = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# jemalloc_pprof = { version = "0.8.2", optional = true, features = ["flamegraph", "symbolize"] }
tikv-jemallocator = { version = "0.7.0", features = [
  "disable_initial_exec_tls",
  "profiling",
  "unprefixed_malloc_on_supported_platforms"
] }

# Windows-specific str0m override
[target.'cfg(windows)'.dependencies]
str0m = { workspace = true, features = ["wincrypto"] }

[features]
default = []
deep-metrics = ["pulsebeam-runtime/deep-metrics"]
parking_lot = ["once_cell/parking_lot", "pulsebeam-runtime/parking_lot"]
sim = ["pulsebeam-core/sim", "pulsebeam-runtime/sim"]
tokio-console = ["console-subscriber", "tokio/tracing"]
